chore: Implement network connection